--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
 	margin: 40px;
 	padding: 40px;
 	background-color: rgb(230, 230, 230);
-	border-radius: 10%;
+	border-radius: 50px;
 }
 
 .largeText {
