--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,56 @@
 	text-decoration: none;
 	color: rgb(51, 153, 51);
 	display: block;
-	width: 200px;
-	height: 30px;
-	font-size: 20px;
+	width: 400px;
+	height: 100px;
+	line-height: 100px;
+	font-size: 30px;
+	vertical-align: middle;
 	text-align: center;
 	margin: 20px;
+}
+
+
+#stargate{
+	background: white;
+}
+
+#stargate text{
+	background-color: #f3ec78;
+    background-image: linear-gradient(45deg, #3333ff, #707070);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+}
+
+#phantom{
+	background: white;
+}
+
+#phantom text{
+	background-color: #f3ec78;
+    background-image: linear-gradient(45deg, #3333ff, #707070);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+}
+
+#colorbukkit {
+	background: white;
+}
+
+#colorbukkit text{
+	background-color: #f3ec78;
+    background-image: linear-gradient(45deg, #3333ff, #707070);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
 }
 
 @media only screen and (min-width: 600px){
