--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,3 @@
-
-
-
-
-
 .project {
 	text-decoration: none;
 	color: rgb(51, 153, 51);
@@ -21,11 +16,11 @@
 #stargate{
 	background: white;
 	transform: rotate(3deg);
-	transition: transform 2s ease-out 100ms
+	transition: transform 1s ease-out 100ms
 }
 
 #stargate:hover{
-	transform: translateX(200%);
+	transform: translateX(5%);
 }
 
 #stargate text{
@@ -41,11 +36,16 @@
 #phantom{
 	transform: rotate(-3deg);
 	background: white;
+	transition: transform 1s ease-out 100ms
+}
+
+#phantom:hover{
+	transform: translateX(-5%);
 }
 
 #phantom text{
 	background-color: #f3ec78;
-    background-image: linear-gradient(45deg, #3333ff, #707070);
+    background-image: linear-gradient(45deg, #cc00ff, #707070);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -55,15 +55,11 @@
 
 #colorbukkit {
 	background: white;
+	color: yellow;
 	transform: rotate(5deg);
+	transition: color 1s;
 }
 
-#colorbukkit text{
-	background-color: #f3ec78;
-    background-image: linear-gradient(45deg, #3333ff, #707070);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-text-fill-color: transparent;
+#colorbukkit:hover{
+	color: #707070;
 }
